--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
 
        <h1>Adenium</h1>
        <hr>
-       <p>Somos una empresa 100% hermosillense que desarrollamos jabones artesanales para el cuidado de la piel de los cuidanos de hermosillo para evitar el mal cuidado.
-
+       <p>
+         Somos una Empresa dedicada a la fabricación y venta de Jabones Artesanales a base de materiales naturales y aceites esenciales de glicerina vegetal, con aditivos naturales que nos conectan con la madre naturaleza y brindan bienestar a nuestro cuerpo. 
+         
        </p>
 </div>
   </div>         
